# TestingGithub

./: .gitignore  404.html  README.md  genindex.html  index.html  interpret_pyproject.py  objects.inv  py-modindex.html  pyproject.toml  randomtext.md  requirements.txt  search.html  searchindex.js  testing_interfaces.py
.Unused_gh_workflows/: multi-branch-sphinx-to-pages.yml  sphinx-to-GHPages.yml  sphinx-to-pages-try2.yml
.github/workflows/: initialize-push-workflows.yml  multi-branch-sphinx-to-pages.yml  python-app.yml  quick-test.yml  read-toml.yml  sphinx-to-GHPages.yml  sphinx-to-pages-try2.yml  test-variables.yml
_modules/: index.html  old_test_verify.html
_sources/: index.rst.txt
_sources/code/: index.rst.txt
_sources/dev/: index.rst.txt
_sources/nonsense/: index.rst.txt
code/: index.html  old_test_verify.html
dev/: .buildinfo  404.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
dev/.doctrees/: 404.doctree  environment.pickle  index.doctree
dev/.doctrees/code/: index.doctree  old_test_verify.doctree
dev/.doctrees/dev/: index.doctree
dev/.doctrees/nonsense/: index.doctree
dev/_modules/: index.html  old_test_verify.html
dev/_sources/: index.rst
dev/_sources/dev/: index.rst
dev/code/: index.html  old_test_verify.html
dev/dev/: index.html
dev/nonsense/: index.html
docs/: Makefile  index.html  requirements.txt  search.html  searchindex.js
docs/code/: index.html
docs/nonsense/: index.html
docs/sphinx/source/: 404.rst  conf.py  index.rst
docs/sphinx/source/code/: index.rst  old_test_verify.rst
docs/website/doctrees/: environment.pickle
docs/website/doctrees/code/: index.doctree
docs/website/html/: .buildinfo
doctrees/: environment.pickle  index.doctree
doctrees/nonsense/: index.doctree
html/: genindex.html  objects.inv
nonsense/: index.html
src/: __init__.py  old_test_verify.py  test_verify.py
src/af/: __init__.py  a.py
src/af/bf/: b.py  bthing.py
tests/: test_basic.py  test_marking.py
