[config.sphinx] # Metadata displayed on Sphinx page (custom)
name = "Testing Github"
#version = uses version in tool.poetry
copyright_message = '2024, rhit-mierowir'
author = 'rhit-mierowir'

theme = "sphinx_nefertiti"
#OPTIONS:   'sphinx_book_theme'
#           'sphinx_wagtail_theme'
#           'sphinx_nefertiti'      <== Default/Suggested
#           'pydata_sphinx_theme'



# Config File for Poetry:
# More Info: https://python-poetry.org/docs/pyproject/
[tool.poetry]
name = "TestingGitHub"
version = "0.1.0"
description = "A project to test using GitHub Actions and other python packages and for testing python coding practices."
authors = [
  "rhit-mierowir <mierowir@rose-hulman.edu>"
  ]

#maintainers = [ # Should be distinct from list of authors Optional
#  "Isaac Mierow <mierowir@rose-hulman.edu>"
#  ]

#What we want to include or exclude in the package
#exclude = ["requirements.txt"]

#Package information & websites
package-mode = false 
# Change to true when we want to publish
readme = "README.md"
license = "AGPL-1.0-or-later" # more licenses at https://spdx.org/licenses/
homepage = "https://evolvablehardware.org/"
repository = "https://github.com/rhit-mierowir/TestingGithub"
documentation = "https://rhit-mierowir.github.io/TestingGithub/"

#
#keywords = ["TestingGithub", "Esperimental"]
#classifiers = [ # See https://pypi.org/classifiers/
#  "Private :: Do Not Upload", # This makes pypy reject itr
#  # Note Python and Lisense requirement are filled in by python dependancy and lisence property
#  "Development Status :: 1 - Planning",
#  "Environment :: Console",
#   "Intended Audience :: Developers",
#   "Intended Audience :: Education",
#   "Intended Audience :: End Users/Desktop",
#   "Intended Audience :: Science/Research",
#   "Operating System :: POSIX :: Linux",
#   "Programming Language :: C++",
#   "Topic :: Documentation :: Sphinx",
#   "Topic :: Scientific/Engineering",
#   "Topic :: Scientific/Engineering :: Artificial Intelligence",
#   "Topic :: Scientific/Engineering :: Artificial Life",
#   "Topic :: Scientific/Engineering :: Bio-Informatics",
#   "Topic :: Software Development :: Testing",
#   "Topic :: Software Development :: Version Control :: Git",
#   "Topic :: System :: Hardware",
#   "Topic :: System :: Hardware :: Universal Serial Bus (USB)",
#   "Topic :: System :: Hardware :: Universal Serial Bus (USB) :: Miscellaneous"
# ]
[project.optional-dependencies]
test = [
    "pytest",
]
docs = [
    "furo",
    "sphinxnotes-any",
    "sphinx_design",
    "sphinx_copybutton",
    "sphinxcontrib-gtagjs",
]

#This is where we can put other URLs we want to link to
[tool.poetry.urls]
"Bug Tracker" = "https://github.com/python-poetry/poetry/issues"

[tool.poetry.dependencies]
python = "^3.10"
toml = "^0.10.2"
serial = "^0.0.97"

[tool.poetry.group.docs]
# Here, the dependancies in the dev group won't be added unless we specify
# poetry install --with dev
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = "^7.2.6"
sphinx-nefertiti = "^0.3.2"
sphinx-book-theme = "^1.1.2"
sphinx-wagtail-theme = "^6.3.0"
pydata-sphinx-theme = "^0.15.2"

[tool.poetry.group.dev]
# Here, the dependancies in the dev group won't be added unless we specify
# poetry install --with dev
optional = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

# For Sphinx:
Sphinx = "^7.2.6"
sphinx-nefertiti = "^0.3.2"
sphinx-book-theme = "^1.1.2"
sphinx-wagtail-theme = "^6.3.0"
pydata-sphinx-theme = "^0.15.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
