[config.sphinx] # Metadata displayed on Sphinx page (custom)
name = "Testing Github"
#version = uses version in tool.poetry
copyright_message = '2024, rhit-mierowir'
author = 'rhit-mierowir'

theme = "sphinx_nefertiti"
#OPTIONS:   'sphinx_book_theme'
#           'sphinx_wagtail_theme'
#           'sphinx_nefertiti'      <== Default/Suggested
#           'pydata_sphinx_theme'



# Config File for Poetry:
# More Info: https://python-poetry.org/docs/pyproject/
[tool.poetry]
name = "TestingGitHub"
version = "0.1.0"
description = "A project to test using GitHub Actions and other python packages and for testing python coding practices."
authors = [
  "rhit-mierowir <mierowir@rose-hulman.edu>"
  ]

#maintainers = [ # Should be distinct from list of authors Optional
#  "Isaac Mierow <mierowir@rose-hulman.edu>"
#  ]

#What we want to include or exclude in the package
#exclude = ["requirements.txt"]

#Package information & websites
package-mode = false
# Change to true when we want to publish
readme = "README.md"
license = "AGPL-1.0-or-later" # more licenses at https://spdx.org/licenses/
homepage = "https://evolvablehardware.org/"
repository = "https://github.com/rhit-mierowir/TestingGithub"
documentation = "https://rhit-mierowir.github.io/TestingGithub/"

#This is where we can put other URLs we want to link to
[tool.poetry.urls]
"Bug Tracker" = "https://github.com/python-poetry/poetry/issues"

#dependancies needed to run the app under normal conditions
[tool.poetry.dependencies]
python = "^3.10"
toml = "^0.10.2"
serial = "^0.0.97"

#docs group is all that's needed to compile sphinx.
[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = "^7.2.6"
sphinx-nefertiti = "^0.3.2"
sphinx-book-theme = "^1.1.2"
sphinx-wagtail-theme = "^6.3.0"
pydata-sphinx-theme = "^0.15.2"

#dev group for developers updating the code
[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
Sphinx = "^7.2.6"
sphinx-nefertiti = "^0.3.2"
sphinx-book-theme = "^1.1.2"
sphinx-wagtail-theme = "^6.3.0"
pydata-sphinx-theme = "^0.15.2"

#This is used when we want to read pyproject.toml while evaluating workflows.
[tool.poetry.group.gh_read_pyproject]
optional = true

[tool.poetry.group.gh_read_pyproject.dependencies]
toml = "^0.10.2"

#gh_tests group for all testing on github.
[tool.poetry.group.gh_tests]
optional = true

[tool.poetry.group.gh_tests.dependencies]
pytest = "^8.2.0"

#gh_tests group for building documentation on github.
[tool.poetry.group.gh_docs]
optional = true

[tool.poetry.group.gh_docs.dependencies]
pytest = "^8.2.0"
toml = "^0.10.2"
Sphinx = "^7.2.6"
sphinx-nefertiti = "^0.3.2"
sphinx-book-theme = "^1.1.2"
sphinx-wagtail-theme = "^6.3.0"
pydata-sphinx-theme = "^0.15.2"

#tests group is group for testing in local contexts
[tool.poetry.group.tests.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tests]
# all values used when testing

[tests.workflows]
# these are values that need verification in testing
python-versions = ["3.8","3.9","3.10","3.11","3.12"]

